concord-console: fix segment background when scroll bars are visible, fix loading indicator (#1675)

--- a/console2/src/components/molecules/LogSegment/styles.css
+++ b/console2/src/components/molecules/LogSegment/styles.css
@@ -103,7 +103,7 @@
     margin: 0;
     padding: 10px 0 10px 10px;
     display: inline-block;
-    width: 100%;
+    min-width: 100%;
 }
 
 .LogSegment .Content pre {
